--- a/Regression_capstone_project.ipynb
+++ b/Regression_capstone_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMTcjoUyA6vGFz5E3DIaJHW",
+      "authorship_tag": "ABX9TyNALVibpmWm2FjYRvaAIkhX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,12 +49,13 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from xgboost import XGBRegressor\n",
         "from sklearn import neighbors\n",
+        "from sklearn.svm import SVR\n",
         "\n"
       ],
       "metadata": {
         "id": "FByQDm09dV44"
       },
-      "execution_count": 108,
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -2191,7 +2192,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**K-NEAREST NEIGHBORS**"
+        "**4.K-NEAREST NEIGHBORS**"
       ],
       "metadata": {
         "id": "uK4rjJn_657U"
@@ -2244,11 +2245,11 @@
         "round(model.score(X_train,y_train),3)"
       ],
       "metadata": {
-        "id": "NoGdAUuBBy77",
-        "outputId": "9bd094f9-2846-45b3-ad7f-2444f9081b83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NoGdAUuBBy77",
+        "outputId": "9bd094f9-2846-45b3-ad7f-2444f9081b83"
       },
       "execution_count": 133,
       "outputs": [
@@ -2378,7 +2379,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**XGBOOST REGRESSOR**"
+        "**5.XGBOOST REGRESSOR**"
       ],
       "metadata": {
         "id": "sVotVWZ1AkGd"
@@ -2392,11 +2393,11 @@
         "xgboost_reg=xgb.fit(X_train,y_train)"
       ],
       "metadata": {
-        "id": "I3C5Z17iA2Tc",
-        "outputId": "a00e74d0-c711-4550-9f2f-601f6f7e9adb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I3C5Z17iA2Tc",
+        "outputId": "a00e74d0-c711-4550-9f2f-601f6f7e9adb"
       },
       "execution_count": 139,
       "outputs": [
@@ -2416,11 +2417,11 @@
         "round(xgboost_reg.score(X_train,y_train),3)"
       ],
       "metadata": {
-        "id": "vecSOoNmCC83",
-        "outputId": "74769f3c-ca40-4c03-a225-82503d3b8f1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vecSOoNmCC83",
+        "outputId": "74769f3c-ca40-4c03-a225-82503d3b8f1b"
       },
       "execution_count": 140,
       "outputs": [
@@ -2443,11 +2444,11 @@
         "round(xgboost_reg.score(X_test,y_test),3)"
       ],
       "metadata": {
-        "id": "ERLHyda2CDFl",
-        "outputId": "efc42d31-e130-47f0-f749-c739d40f4833",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ERLHyda2CDFl",
+        "outputId": "efc42d31-e130-47f0-f749-c739d40f4833"
       },
       "execution_count": 141,
       "outputs": [
@@ -2483,11 +2484,11 @@
         "print(\"R2 :\",round(r2_score(y_test, y_pred_xgb), 3))"
       ],
       "metadata": {
-        "id": "H9BKF9hOA2dE",
-        "outputId": "facb03cb-8a53-46de-ef5c-a5d6e0373609",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "H9BKF9hOA2dE",
+        "outputId": "facb03cb-8a53-46de-ef5c-a5d6e0373609"
       },
       "execution_count": 143,
       "outputs": [
@@ -2515,12 +2516,12 @@
         "plt.ylabel('Closing Price')"
       ],
       "metadata": {
-        "id": "6qpoQgndA2gW",
-        "outputId": "5de9f4ca-c492-498d-8bd0-7de9212922a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 393
-        }
+        },
+        "id": "6qpoQgndA2gW",
+        "outputId": "5de9f4ca-c492-498d-8bd0-7de9212922a5"
       },
       "execution_count": 144,
       "outputs": [
@@ -2547,22 +2548,125 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**6.Support Vector Machine (SVM)**"
+      ],
+      "metadata": {
+        "id": "UJdfoAcODdmt"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "svm_regressor = SVR(kernel='linear')\n"
+      ],
       "metadata": {
         "id": "4-8S-W8IA2jX"
       },
-      "execution_count": null,
+      "execution_count": 147,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Fitting the model\n",
+        "svm_model=svm_regressor.fit(X_train,y_train)"
+      ],
       "metadata": {
         "id": "oV1SrblsA2m1"
       },
-      "execution_count": null,
+      "execution_count": 148,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check the accuracy of our model on training data\n",
+        "round(svm_model.score(X_train,y_train),3)"
+      ],
+      "metadata": {
+        "id": "bcUsZNcUEOPf",
+        "outputId": "1256f98a-9b88-44a2-c5ae-8e6c09b6fbb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.805"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check the accuracy of our model on testing data\n",
+        "round(svm_model.score(X_test,y_test),3)"
+      ],
+      "metadata": {
+        "id": "gbRd8f6gEOZ5",
+        "outputId": "9edc538e-f7e6-4137-a343-b86642d08fe6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.804"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#prediction\n",
+        "y_svm_pred=svm_model.predict(X_test)\n",
+        "y_svm_pred"
+      ],
+      "metadata": {
+        "id": "tGiEQLkOEMf0",
+        "outputId": "200eb019-e94c-4334-8669-685fba848f58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.56527366, 1.5810013 , 1.68651577, 1.52794295, 2.04277679,\n",
+              "       2.75237115, 1.67905976, 1.56424415, 1.57742564, 1.66791424,\n",
+              "       2.10638922, 1.66071615, 1.52699551, 2.63695142, 1.7482605 ,\n",
+              "       1.65835287, 1.5731054 , 1.99027579, 1.83465627, 1.79746908,\n",
+              "       1.58193353, 1.53566271, 1.8756825 , 1.67085155, 2.08454096,\n",
+              "       1.54333137, 1.52927758, 1.65637669, 1.58609818, 1.71874222,\n",
+              "       2.39405935, 2.77225879, 1.73122873, 2.37176162, 1.8108193 ,\n",
+              "       1.66905087, 2.33866418])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 151
+        }
+      ]
     }
   ]
 }
